Fix the !(ENABLE(SVG_FONTS) || ENABLE(SVG_OTF_CONVERTER)) build after r196322 https://bugs.webkit.org/show_bug.cgi?id=154104

Reviewed by Myles C. Maxfield.

* css/CSSFontFaceSource.cpp:
(WebCore::CSSFontFaceSource::CSSFontFaceSource):


Canonical link: https://commits.webkit.org/172350@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@196576 268f45cc-cd09-0410-ab3c-d52691b4dbfc