Source/WebCore/css/CSSFontFaceSource.cpp
@@ -76,8 +76,14 @@ CSSFontFaceSource::CSSFontFaceSource(CSSFontFace& owner, const String& familyNam
     : m_familyNameOrURI(familyNameOrURI)
     , m_font(font)
     , m_face(owner)
+#if ENABLE(SVG_FONTS) || ENABLE(SVG_OTF_CONVERTER)
     , m_svgFontFaceElement(fontFace)
+#endif
 {
+#if !(ENABLE(SVG_FONTS) || ENABLE(SVG_OTF_CONVERTER))
+    UNUSED_PARAM(fontFace);
+#endif
+
     // This may synchronously call fontLoaded().
     if (m_font)
         m_font->addClient(this);
